<?xml version="1.0"?>
<package format="2">
  <name>benthos_release</name>
  <version>0.0.0</version>
  <description>The benthos_release package</description>
  
  <maintainer email="youremail@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <build_depend>rospy</build_depend>
  <exec_depend>rospy</exec_depend>
  <build_depend>std_msgs</build_depend>
  <exec_depend>std_msgs</exec_depend>
  <!-- Other dependencies as required -->

  <export>
  </export>
</package>

